Implemented proper json listings
- id can be used both flatten (so equal to plaintext) or properly
strcutured for JQ (default)
- listing can be redirecd to stderr to use with `jq` directly